Resolves: tdf#93388 broadcasting to removed listeners isn't a good idea

This cures only a symptom, the underlying cause is that the broadcasters
still are listed in maBulkGroupAreas.

Change-Id: I9625483016a51eb6f6a7e3d58ed42c7dad3a57b3
(cherry picked from commit 2d4edd7de2e67db5bd17e7a89e2496611ebcc165)
Reviewed-on: https://gerrit.libreoffice.org/17684
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>